fixed issue with close button staying visible on window resize

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,14 @@ h5 {
 .nav .__toggle {
   display: flex;
 }
+.nav .active {
+  font-weight: 600;
+}
+@media (min-width: 45rem) {
+  .nav .active {
+    font-weight: inherit;
+  }
+}
 .nav__list {
   list-style-type: none;
   display: flex;
@@ -171,6 +179,10 @@ h5 {
 .nav__link {
   font-size: 1.125rem;
   padding: 0.75rem 0;
+  transition: all 0.3s;
+}
+.nav__link:hover, .nav__link:focus {
+  color: var(--color-light-vermillion);
 }
 @media (min-width: 45rem) {
   .nav__link {
