--- a/sass/components/__navbar.scss
+++ b/sass/components/__navbar.scss
@@ -12,6 +12,14 @@
         display: flex;
     }
 
+    .active {
+        font-weight: 600;
+
+        @include breakpoint('md') {
+            font-weight: inherit;
+        }
+    }
+
     &__list {
         list-style-type: none;
         display: flex;
@@ -29,6 +37,13 @@
     &__link {
         font-size: 1.125rem;
         padding: .75rem 0;
+
+        transition: all .3s;
+
+        &:hover,
+        &:focus {
+            color: var(--color-light-vermillion);
+        }
 
         @include breakpoint('md') {
             margin: 0;
